--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
+    "linkifyjs": "^4.1.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-textarea-autosize": "^8.4.1",
     "react-tooltip": "^5.11.1"
   },
