--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-linkify": "^1.0.0-alpha",
-    "react-textarea-autosize": "^8.4.1",
-    "react-tooltip": "^5.11.1"
+    "react-textarea-autosize": "^8.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
