--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
     "linkifyjs": "^4.1.1",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-linkify": "^1.0.0-alpha",
